# ProcessesLaboratory

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
ProcessesLaboratoryGUI/: Domain.cs  Form1.Designer.cs  Form1.cs  NativeMethods.cs  ProcessesLaboratory.Designer.cs  ProcessesLaboratory.cs  ProcessesLaboratory.resx  ProcessesLaboratoryGUI.csproj  Program.cs  app.manifest
ProcessesLaboratoryGUI/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
src/: analizer.cpp  analizer.h  analyzer.cpp  analyzer.h  application.cpp  application.h  application_dll.cpp  application_dll.h  detector.cpp  detector.h  domain.cpp  domain.h  gui.cpp  gui.h  hidden_processes_analizer.cpp  hidden_processes_analizer.h  hidden_processes_analyzer.cpp  hidden_processes_analyzer.h  logger.h  main.cpp  process_scanner.cpp  process_scanner.h  rwx_analyzer.cpp  rwx_analyzer.h
src/Analyzers/: analyzer.cpp  analyzer.h
src/Analyzers/AdminRights/: admin_rights_analyzer.cpp  admin_rights_analyzer.h  admin_rights_detector.h
src/Analyzers/EnabledPrivileges/: privilege_analyzer.cpp  privilege_analyzer.h
src/Analyzers/EscalatedPrivileges/: privilege_analyzer.cpp  privilege_analyzer.h
src/Analyzers/HiddenProcesses/: hidden_processes_analyzer.cpp  hidden_processes_analyzer.h
src/Analyzers/RWX/: rwx_analyzer.cpp  rwx_analyzer.h
src/LegacyGUI/: application.h  gui.cpp  gui.h
src/Logger/: logger.cpp
src/NtDll/: ntdll.cpp  ntdll.h  ntdll_domain.cpp  ntdll_domain.h
src/PrivilegeEscalator/: privilege_escalator.cpp  privilege_escalator.h
src/ProcessScanner/: process_scanner.cpp  process_scanner.h
src/ProcessesLabaratory/: processes_labaratory.cpp  processes_labaratory.h
src/ProcessesLaboratory/: processes_laboratory.cpp  processes_laboratory.h
src/SnapshotsProvider/: snapshots_provider.cpp  snapshots_provider.h
src/ThreadPool/: thread_pool.h
